[gd_scene load_steps=20 format=3 uid="uid://cudva8w7g4cq6"]

[ext_resource type="PackedScene" uid="uid://dedbpf86ccbmq" path="res://scenes/card_holder.tscn" id="1_ibkli"]
[ext_resource type="PackedScene" uid="uid://bgotnrxymhdmn" path="res://scenes/camera_manager.tscn" id="2_78awf"]
[ext_resource type="Script" uid="uid://160mq01f5ash" path="res://scripts/Game.gd" id="2_gamegd"]
[ext_resource type="PackedScene" uid="uid://cfdlnl2idxx8u" path="res://scenes/player_plot.tscn" id="3_cpr0p"]
[ext_resource type="Texture2D" uid="uid://cllmt8gc4d4kg" path="res://Assets/landscape/Sprite-0002.png" id="3_kiw3p"]
[ext_resource type="Texture2D" uid="uid://capy81h6w4vjw" path="res://Assets/landscape/Grass.png" id="3_qy1jj"]
[ext_resource type="FontFile" uid="uid://drkkic2osaftg" path="res://Assets/fonts/Minecraftia-Regular.ttf" id="3_s0nni"]
[ext_resource type="Texture2D" uid="uid://bons6a4343imk" path="res://Assets/landscape/sadas.png" id="4_3xj3m"]
[ext_resource type="Texture2D" uid="uid://q32nagr62ido" path="res://Assets/UI/Energy-Sheet.png" id="6_aug50"]
[ext_resource type="PackedScene" uid="uid://ygi0h704mijm" path="res://UI/Healthbar/healthbar-building.tscn" id="8_400sg"]

[sub_resource type="AtlasTexture" id="AtlasTexture_kiw3p"]
atlas = ExtResource("6_aug50")
region = Rect2(0, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_400sg"]
atlas = ExtResource("6_aug50")
region = Rect2(70, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_g4kob"]
atlas = ExtResource("6_aug50")
region = Rect2(140, 0, 70, 70)

[sub_resource type="AtlasTexture" id="AtlasTexture_qy1jj"]
atlas = ExtResource("6_aug50")
region = Rect2(210, 0, 70, 70)

[sub_resource type="SpriteFrames" id="SpriteFrames_3xj3m"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_kiw3p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_400sg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g4kob")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qy1jj")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mcffj"]
texture = ExtResource("3_qy1jj")
texture_region_size = Vector2i(600, 600)
0:0/0 = 0
0:0/0/texture_origin = Vector2i(48, 12)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2rd6h"]
texture = ExtResource("4_3xj3m")
texture_region_size = Vector2i(144, 87)
1:1/0 = 0
0:1/0 = 0
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -5)
1:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_400sg"]
texture = ExtResource("3_kiw3p")
texture_region_size = Vector2i(256, 256)
1:2/0 = 0
0:2/0 = 0
0:0/0 = 0
0:0/0/texture_origin = Vector2i(0, -2)

[sub_resource type="TileSet" id="TileSet_g4kob"]
tile_shape = 1
tile_size = Vector2i(196, 97)
sources/2 = SubResource("TileSetAtlasSource_400sg")
sources/0 = SubResource("TileSetAtlasSource_mcffj")
sources/1 = SubResource("TileSetAtlasSource_2rd6h")

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_right = 4.0
script = ExtResource("2_gamegd")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PlayerName" type="Label" parent="CanvasLayer"]
offset_left = 28.0
offset_top = 508.0
offset_right = 178.0
offset_bottom = 536.0
theme_override_fonts/font = ExtResource("3_s0nni")
text = "CUrrent Player"

[node name="PlayerEnergy" type="Label" parent="CanvasLayer"]
offset_left = 596.0
offset_top = 534.0
offset_right = 617.0
offset_bottom = 562.0
theme_override_colors/font_color = Color(0.0347404, 0.193706, 0.0775828, 1)
theme_override_fonts/font = ExtResource("3_s0nni")
text = " 3"

[node name="OpponentName" type="Label" parent="CanvasLayer"]
offset_left = 1021.0
offset_top = 502.0
offset_right = 1135.0
offset_bottom = 530.0
theme_override_fonts/font = ExtResource("3_s0nni")
text = "OppPlayer"
horizontal_alignment = 2

[node name="OpponentEnergy" type="Label" parent="CanvasLayer"]
offset_left = 853.0
offset_top = 504.0
offset_right = 967.0
offset_bottom = 557.0
theme_override_fonts/font = ExtResource("3_s0nni")
text = "Energy: 3
"
horizontal_alignment = 2

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="CanvasLayer"]
position = Vector2(1000, 515)
scale = Vector2(0.871429, 0.871429)
sprite_frames = SubResource("SpriteFrames_3xj3m")
autoplay = "default"
frame_progress = 0.44364

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 588.0
offset_top = 610.0
offset_right = 628.0
offset_bottom = 633.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("3_s0nni")
theme_override_font_sizes/font_size = 8
text = "TIME"

[node name="Timer" type="Timer" parent="CanvasLayer"]
autostart = true

[node name="PlayerHealthbar" parent="CanvasLayer" instance=ExtResource("8_400sg")]
offset_left = 28.0
offset_top = 427.0
offset_right = 292.0
offset_bottom = 801.0
metadata/_edit_lock_ = true

[node name="Sprite2D" parent="CanvasLayer/PlayerHealthbar" index="1"]
position = Vector2(131.5, 181.375)
scale = Vector2(3.5125, 3.81563)

[node name="OpponentHealthbar" parent="CanvasLayer" instance=ExtResource("8_400sg")]
offset_left = 873.0
offset_top = 433.0
offset_right = 1137.0
offset_bottom = 807.0

[node name="Sprite2D" parent="CanvasLayer/OpponentHealthbar" index="1"]
position = Vector2(131.5, 181.375)
scale = Vector2(3.5125, 3.81563)

[node name="OpponentCards" parent="CanvasLayer" instance=ExtResource("1_ibkli")]
z_index = 1
offset_left = -483.0
offset_top = -157.0
offset_right = -72.0
offset_bottom = -10.0

[node name="PlayerCards" parent="CanvasLayer" instance=ExtResource("1_ibkli")]
z_index = 1
offset_left = 385.0
offset_top = 516.0
offset_right = 766.0
offset_bottom = 663.0
metadata/_edit_lock_ = true

[node name="camera_manager" parent="." instance=ExtResource("2_78awf")]
position = Vector2(-4, 0)
min_zoom = 1.0
drag_speed = 2.0
limit_left = -850.0
limit_top = -500.0
limit_right = 800.0
limit_bottom = 300.0
pan_margin = 128.0

[node name="TileMapLayer" type="TileMapLayer" parent="camera_manager"]
z_index = 1
y_sort_enabled = true
texture_filter = 1
position = Vector2(86, -32)
tile_map_data = PackedByteArray(0, 0, 1, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 253, 255, 0, 0, 0, 0, 0, 0, 0, 0, 2, 0, 254, 255, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0)
tile_set = SubResource("TileSet_g4kob")

[node name="Players" type="Node" parent="."]

[node name="PlayerPlot" parent="." instance=ExtResource("3_cpr0p")]
offset_left = -10.0
offset_top = 53.0
offset_right = -10.0
offset_bottom = 53.0
scale = Vector2(6, 6)

[node name="OpponentPlot" parent="." instance=ExtResource("3_cpr0p")]
offset_left = 693.0
offset_top = 54.0
offset_right = 693.0
offset_bottom = 54.0
scale = Vector2(6, 6)

[connection signal="timeout" from="CanvasLayer/Timer" to="." method="_on_timer_timeout"]

[editable path="CanvasLayer/PlayerHealthbar"]
[editable path="CanvasLayer/OpponentHealthbar"]
